# proyecto_final_python

./: Makefile  README.md  pyproject.toml
data/interim/: wine_inter  wine_inter01.csv  wine_inter02.csv
notebooks/: 01_Analisis_Exploratorio.ipynb  02_Limpieza_Datos.ipynb  03_Creacion_Variables.ipynb  04_Visualizaciones.ipynb  05_Aplicacion_practica.ipynb
notebooks/script/: 01_Analisis_Exploratorio.py  02_Limpieza_Datos.py  03_Creacion_Variables.py  04_Visualizaciones.py  05_Aplicacion_practica.py
